@@ -1,7 +1,8 @@
 package kitchenpos.fixture;
 
-import java.util.Collections;
 import java.util.List;
+import kitchenpos.order.application.dto.OrderCreateRequest;
+import kitchenpos.order.application.dto.OrderLineItemCreateRequest;
 import kitchenpos.order.domain.Order;
 import kitchenpos.order.domain.OrderLineItem;
 
@@ -19,15 +20,9 @@ public class OrderFixture {
     return new Order(null, orderTableId, status, null, List.of(orderLineItem));
   }
 
-  public static Order 빈_주문(final Long orderTableId) {
-    final OrderLineItem orderLineItem = new OrderLineItem(null, null, 1L, 1);
-
-    return new Order(null, orderTableId, null, null, Collections.emptyList());
-  }
-
-  public static Order 주문_잘못된_메뉴() {
-    final OrderLineItem orderLineItem = new OrderLineItem(null, null, 999L, 1);
-
-    return new Order(null, 1L, null, null, List.of(orderLineItem));
+  public static OrderCreateRequest getOrderRequest(final Long orderTableId) {
+    final OrderLineItemCreateRequest orderLineItemCreateRequest = new OrderLineItemCreateRequest(1L,
+        1);
+    return new OrderCreateRequest(orderTableId, List.of(orderLineItemCreateRequest));
   }
 }
